# vr-mc-diagnostic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
config/MotorControl/: motorControlTestDB.yaml
docs/: user_guide.html  user_guide.md  user_guide.xml
resources/: vrmc.qrc
src/: BwFromKp.hpp  ConnectionDialog.cpp  ConnectionDialog.hpp  DriveConfigDialog.cpp  DriveConfigDialog.hpp  FaultDiagDialog.cpp  FaultDiagDialog.hpp  FirmwareUpgradeDialog.cpp  FirmwareUpgradeDialog.hpp  GainEditor.cpp  GainEditor.hpp  JointControlPanel.cpp  JointControlPanel.hpp  LogDock.cpp  LogDock.hpp  MainWindow.cpp  MainWindow.hpp  MasterWorker.cpp  MasterWorker.hpp  MotorProfile.cpp  MotorProfile.hpp  MotorProfileEditor.cpp  MotorProfileEditor.hpp  MotorProfileView.cpp  MotorProfileView.hpp  MotorView.cpp  MotorView.hpp  ObjectDictionaryDialog.cpp  ObjectDictionaryDialog.hpp  PdoMappingEditor.cpp  PdoMappingEditor.hpp  PdoMappingView.cpp  PdoMappingView.hpp  RunInDialog.cpp  RunInDialog.hpp  ScenarioEditorDialog.cpp  ScenarioEditorDialog.hpp  SignalGeneratorPanel.cpp  SignalGeneratorPanel.hpp  SlavePickerBar.cpp  (+8 more)
src/TestRunner/: AddTestDialog.cpp  AddTestDialog.hpp  AppConfig.hpp  DatabaseEditDialog.cpp  DatabaseEditDialog.hpp  HandWorkerCompat.cpp  HandWorkerCompat.hpp  ParamsEditDialog.cpp  ParamsEditDialog.hpp  TestDescriptionDialog.cpp  TestDescriptionDialog.hpp  TestResultDialog.cpp  TestResultDialog.hpp  TestRunnerWindow.cpp  TestRunnerWindow.hpp  YamlBridge.cpp  YamlBridge.hpp
src/TestRunner/probes/: BandwidthSweepProbe.cpp  BandwidthSweepProbe.hpp  EstopProbe.cpp  EstopProbe.hpp  OperationModeProbe.cpp  OperationModeProbe.hpp  RoundTripProbe.cpp  RoundTripProbe.hpp  SoftLimitProbe.cpp  SoftLimitProbe.hpp  WorkerThreadProbe.cpp  WorkerThreadProbe.hpp
src/backends/: CanBackend.cpp  CanBackend.hpp  DynamixelDriver.cpp  DynamixelDriver.hpp
src/backends/zlg/: can_drv.hpp  controlcanfd.h  hal_can_zlg.cpp  hal_can_zlg.hpp  logger.hpp  timer.h  zlg_can_drv.cpp  zlg_can_drv.hpp
tools/: boot_selftest.c  build_appimage.sh  build_docs.py  vrmc_boot_sim.c  vrmc_sim.c  vrmc_sim_od.c  vrmc_sim_od.h
tools/.cache/: linuxdeploy-plugin-qt
